# fall-2019

./: .travis.yml  CMakeLists.txt  README.md  tinyrender.sln  tinyrender.vcxproj  tinyrender.vcxproj.filters
data/a1/: config.json
data/a1/bunny/tinyrender/: bunny_normal_offline.toml  bunny_normal_offline_8spp.toml  bunny_normal_offline_8spp_REF.exr  bunny_normal_offline_REF.exr  bunny_normal_realtime.toml  bunny_normal_realtime_REF.exr
data/a1/cube/tinyrender/: cube_normal_offline.toml  cube_normal_offline_8spp.toml  cube_normal_offline_8spp_REF.exr  cube_normal_offline_REF.exr  cube_normal_realtime.toml  cube_normal_realtime_REF.exr
data/a1/dragon/mesh/: dragon.mtl
data/a1/dragon/tinyrender/: dragon_normal_offline.toml  dragon_normal_offline_8spp.toml  dragon_normal_realtime.toml
data/a1/sphere/tinyrender/: sphere_normal_offline.toml  sphere_normal_offline_8spp.toml  sphere_normal_realtime.toml
data/a2/: config.json
data/a2/cbox/tinyrender/: cbox_simple_offline.toml  cbox_simple_realtime.toml  cbox_simple_realtime_bonus.toml
data/a2/sphere/mesh/: sphere_diffuse.mtl  sphere_phong.mtl
data/a2/sphere/tinyrender/: sphere_simple_diffuse_offline.toml  sphere_simple_diffuse_offline_REF.exr  sphere_simple_diffuse_realtime.toml  sphere_simple_diffuse_realtime_REF.exr  sphere_simple_phong_offline.toml  sphere_simple_phong_offline_REF.exr  sphere_simple_phong_realtime.toml  sphere_simple_phong_realtime_REF.exr  sphere_simple_phong_realtime_bonus.toml
data/a2/teapot/mesh/: tea.mtl
data/a2/teapot/tinyrender/: teapot_simple_offline.toml  teapot_simple_realtime.toml  teapot_simple_realtime_bonus.toml
data/a3/: config.json
data/a3/cbox/mesh/: cbox.mtl
data/a3/cbox/tinyrender/: cbox_ao_cosine_REF.exr  cbox_ao_hemisphere_REF.exr  cbox_ao_offline.toml  cbox_ao_offline_cosine.toml  cbox_ao_offline_cosine_REF.exr  cbox_ao_offline_hemisphere.toml  cbox_ao_offline_hemisphere_REF.exr  cbox_ao_offline_sphere.toml  cbox_ao_offline_sphere_REF.exr  cbox_ao_sphere_REF.exr  cbox_ro_offline.toml  cbox_ro_offline_REF.exr
data/a3/spaceship/mesh/: spaceship.mtl
data/a3/spaceship/tinyrender/: spaceship_ao_cosine.toml  spaceship_ao_hemisphere.toml  spaceship_ao_offline.toml  spaceship_ao_sphere.toml  spaceship_ro_offline.toml
data/a3/sphere/mesh/: sphere_diffuse.mtl  sphere_phong.mtl
data/a3/sphere/tinyrender/: sphere_area.toml  sphere_area_REF.exr  sphere_bsdf_diffuse_4.toml  sphere_bsdf_diffuse_4_REF.exr  sphere_bsdf_diffuse_64.toml  sphere_bsdf_diffuse_64_REF.exr  sphere_bsdf_phong_4.toml  sphere_bsdf_phong_4_REF.exr  (+8 more)
data/a4/: config.json
data/a5/: config.json
src/: main.cpp
src/bsdfs/: diffuse.h  mixture.h  phong.h
src/core/: accel.h  camera.h  core.h  integrator.cpp  integrator.h  math.h  platform.h  renderer.cpp  renderer.h  renderpass.cpp  renderpass.h
src/integrators/: ao.h  direct.h  normal.h  path.h  polygonal.h  ppm.h  ro.h  simple.h
src/renderpasses/: gi.h  normal.h  polygonal.h  simple.h
src/shaders/: emitter_polygonal.fs  normal.fs  normal.vs  polygonal.fs  polygonal.vs
(+80 files in other folders)
